metadataPackage_1602884205764/objects/Handler_Processed__e.object
<CustomObject>
    <description>Once handler receives the request to create metadata and it informs salesforce with this event</description>
    <label>Handler Processed</label>
    <pluralLabel>Handler Processed</pluralLabel>
    <fields>
        <fullName>Count__c</fullName>
        <description>Count of files processed, Mainly used for zipped files</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LifeCycle_Status__c</fullName>
        <label>LifeCycle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageId__c</fullName>
        <label>MessageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFId__c</fullName>
        <description>Salesforce Id of the document processed</description>
        <label>SFId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the request</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingId__c</fullName>
        <description>The transaction or tracking Id linked with every request</description>
        <label>TrackingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>